Implement change of language of monaco-editor
* Available languages are determined by reading the monaco ZIP and see which dirs. exists under basic-languages
* Switching sends a message to the editor to change the internal model lang.

--- a/TextrudeInteractive/MainWindow.xaml
+++ b/TextrudeInteractive/MainWindow.xaml
@@ -180,10 +180,16 @@
                 Name="OutputText0"
                 Foreground="GreenYellow"
                 IsReadOnly="True" />-->
-              <wv2:WebView2
-                Name="webView"
-                HorizontalAlignment="Stretch"
-                VerticalAlignment="Stretch" />
+              <DockPanel>
+                <WrapPanel DockPanel.Dock="Bottom">
+                  <Label Margin="0,0,10,0" VerticalAlignment="Center">Format:</Label>
+                  <ComboBox
+                    Name="outpuFormat"
+                    MinWidth="100"
+                    SelectionChanged="OnOutputFormatChanged" />
+                </WrapPanel>
+                <wv2:WebView2 Name="webView" />
+              </DockPanel>
             </TabItem>
 
             <TabItem Header="output1">
