User control for models as well

--- a/TextrudeInteractive/InputPane.xaml
+++ b/TextrudeInteractive/InputPane.xaml
@@ -1,22 +1,20 @@
-﻿<UserControl x:Class="TextrudeInteractive.OutputPane"
+﻿<UserControl x:Class="TextrudeInteractive.InputPane"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TextrudeInteractive"
              xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
-             mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800"
-             Loaded="OutputPane_OnLoaded">
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
-
-        <ComboBox Name="FormatSelection" SelectionChanged="FormatSelection_OnSelectionChanged" DockPanel.Dock="Bottom"
+        <ComboBox Name="FormatSelection" SelectionChanged="FormatSelectionChanged" DockPanel.Dock="Bottom"
                   HorizontalAlignment="Right" HorizontalContentAlignment="Right" />
 
         <avalonedit:TextEditor DockPanel.Dock="Top"
                                Foreground="LightSeaGreen"
                                Name="textBox"
-                               IsReadOnly="True" />
-
+                               TextChanged="TextBox_OnTextChanged"
+                              />
     </DockPanel>
 </UserControl>
