--- a/TextrudeInteractive/MainWindow.xaml
+++ b/TextrudeInteractive/MainWindow.xaml
@@ -45,10 +45,10 @@
             <Setter Property="FontFamily" Value="Consolas" />
             <Setter Property="Background" Value="{DynamicResource MaterialDesignPaper}" />
             <Setter Property="ShowLineNumbers" Value="{Binding LineNumbersOn}" />
-            <Setter Property="FontSize" Value="{Binding TextSize}"/>
+            <Setter Property="FontSize" Value="{Binding TextSize}" />
             <Setter Property="WordWrap" Value="{Binding  WordWrapOn}" />
             <Setter Property="Padding" Value="4" />
-           
+
         </Style>
     </Window.Resources>
     <DockPanel>
@@ -58,103 +58,105 @@
                 <MenuItem Click="LoadProject" Header="Load" />
                 <MenuItem Click="SaveProject" Header="Save" />
                 <MenuItem Click="SaveProjectAs" Header="Save as..." />
-                <Separator/>
-                <MenuItem Click="ExportInvocation" Header="Export as invocation"/>
-                <Separator/>
-
+                <Separator />
+                <MenuItem Click="ExportInvocation" Header="Export as invocation" />
+                <Separator />
+                <MenuItem Header="Add">
+                    <MenuItem Click="AddModel" Header="model" />
+                    <MenuItem Click="AddOutput" Header="output" />
+                </MenuItem>
+                <MenuItem Header="Remove">
+                    <MenuItem Click="RemoveModel" Header="model" />
+                    <MenuItem Click="RemoveOutput" Header="output" />
+                </MenuItem>
             </MenuItem>
-            <MenuItem Header ="_View">
-                <MenuItem Header ="Toggle Line _Numbers" Click="ToggleLineNumbers" />
-                <MenuItem Header ="Toggle _Word Wrap" Click="ToggleWordWrap" />
-                <MenuItem Header ="_Smaller font" Click="SmallerFont"/>
-                <MenuItem Header ="_Larger font" Click="LargerFont"/>
+            <MenuItem Header="_View">
+                <MenuItem Header="Toggle Line _Numbers" Click="ToggleLineNumbers" />
+                <MenuItem Header="Toggle _Word Wrap" Click="ToggleWordWrap" />
+                <MenuItem Header="_Smaller font" Click="SmallerFont" />
+                <MenuItem Header="_Larger font" Click="LargerFont" />
             </MenuItem>
             <MenuItem Header="_Help">
                 <MenuItem Header="Home page..." Click="ShowAbout" />
                 <MenuItem Header="Scriban language reference..." Click="ShowLanguageRef" />
-                <Separator/>
+                <Separator />
                 <MenuItem Header="Report a problem..." Click="NewIssue" />
             </MenuItem>
         </Menu>
         <DockPanel DockPanel.Dock="Bottom">
-       
-        <Grid DockPanel.Dock="Bottom" Margin="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="6*" />
-                <RowDefinition Height="3" />
-                <RowDefinition Height="3*" />
-            </Grid.RowDefinitions>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="5" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="5" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+
+            <Grid DockPanel.Dock="Bottom" Margin="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="6*" />
+                    <RowDefinition Height="3" />
+                    <RowDefinition Height="3*" />
+                </Grid.RowDefinitions>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="5" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="5" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
 
-                <TabControl Style="{StaticResource MaterialDesignTabControl}" Grid.Column="0">
-                    <TabItem Header="models">
+                    <TabControl Style="{StaticResource MaterialDesignTabControl}" Grid.Column="0">
+                        <TabItem Header="models">
 
-                        <TabControl Style="{StaticResource MaterialDesignAppBarTabControl}" Name="InputModels" >
-                           
-                        </TabControl>
-                    </TabItem>
-                    <TabItem Header="other">
+                            <TabControl Style="{StaticResource MaterialDesignAppBarTabControl}" Name="InputModels" />
+                        </TabItem>
+                        <TabItem Header="other">
 
-                        <TabControl Style="{StaticResource MaterialDesignAppBarTabControl}">
-                            <TabItem Header="definitions">
-                                <avalonEdit:TextEditor 
-                                    Name="DefinitionsTextBox"
-                                    Foreground="Yellow"
-                                    TextChanged="Avalon1_OnTextChanged" />
-                            </TabItem>
-                            <TabItem Header="include folders">
-                                <avalonEdit:TextEditor 
-                                    Name="IncludesTextBox"
-                                    Foreground="Pink"
-                                    TextChanged="Avalon1_OnTextChanged" />
-                            </TabItem>
-                        </TabControl>
-                    </TabItem>
+                            <TabControl Style="{StaticResource MaterialDesignAppBarTabControl}">
+                                <TabItem Header="definitions">
+                                    <avalonEdit:TextEditor
+                                        Name="DefinitionsTextBox"
+                                        Foreground="Yellow"
+                                        TextChanged="Avalon1_OnTextChanged" />
+                                </TabItem>
+                                <TabItem Header="include folders">
+                                    <avalonEdit:TextEditor
+                                        Name="IncludesTextBox"
+                                        Foreground="Pink"
+                                        TextChanged="Avalon1_OnTextChanged" />
+                                </TabItem>
+                            </TabControl>
+                        </TabItem>
 
 
-                </TabControl>
+                    </TabControl>
 
 
-                <GridSplitter Grid.Column="1" />
+                    <GridSplitter Grid.Column="1" />
 
-                <TabControl Style="{StaticResource MaterialDesignTabControl}" Grid.Column="2">
-                    <TabItem Header="Template">
-                        <avalonEdit:TextEditor 
-                                               Name="TemplateTextBox"
-                                               TextChanged="Avalon1_OnTextChanged"
-                                               Foreground="White"
-                        />
-                    </TabItem>
-                </TabControl>
-
-
-                <GridSplitter Grid.Column="3" />
+                    <TabControl Style="{StaticResource MaterialDesignTabControl}" Grid.Column="2">
+                        <TabItem Header="Template">
+                            <avalonEdit:TextEditor
+                                Name="TemplateTextBox"
+                                TextChanged="Avalon1_OnTextChanged"
+                                Foreground="White" />
+                        </TabItem>
+                    </TabControl>
 
 
-                <TabControl Style="{StaticResource MaterialDesignTabControl}" Grid.Column="4" Name="OutputTab">
-                   
-                </TabControl>
+                    <GridSplitter Grid.Column="3" />
 
+
+                    <TabControl Style="{StaticResource MaterialDesignTabControl}" Grid.Column="4" Name="OutputTab" />
+
+
+                </Grid>
+                <GridSplitter Grid.Row="1" />
+
+
+                <TextBox Grid.Row="2" Name="Errors"
+                         FontWeight="Normal"
+                         IsReadOnly="True"
+                         Foreground="OrangeRed"
+                         FontSize="16" />
 
             </Grid>
-            <GridSplitter Grid.Row="1" />
-
-
-            <TextBox Grid.Row="2" Name="Errors"
-                     FontWeight="Normal"
-                     IsReadOnly="True"
-                     Foreground="OrangeRed"
-                     FontSize="16" />
-
-        </Grid>
         </DockPanel>
     </DockPanel>
 
