--- a/TextrudeInteractive/InputPane.xaml
+++ b/TextrudeInteractive/InputPane.xaml
@@ -5,13 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TextrudeInteractive"
              xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
         <DockPanel   DockPanel.Dock="Bottom">
-            <Button DockPanel.Dock="Left" FontSize="8" Click="LoadFromFile">Load File...</Button>
+         
             <ComboBox Name="FormatSelection" DockPanel.Dock="Right" SelectionChanged="FormatSelectionChanged"
                       HorizontalAlignment="Right" HorizontalContentAlignment="Right" />
+            <local:FileBar x:Name="fileBar" DockPanel.Dock="Left" IsSaveOnly="False"/>
 
         </DockPanel>
 
