--- a/TextrudeInteractive/MainWindow.xaml
+++ b/TextrudeInteractive/MainWindow.xaml
@@ -123,8 +123,6 @@
                                 </TabItem>
                             </TabControl>
                         </TabItem>
-
-
                     </TabControl>
 
 
@@ -132,10 +130,15 @@
 
                     <TabControl Style="{StaticResource MaterialDesignTabControl}" Grid.Column="2">
                         <TabItem Header="Template">
-                            <avalonEdit:TextEditor
-                                Name="TemplateTextBox"
-                                TextChanged="Avalon1_OnTextChanged"
-                                Foreground="White" />
+                            <DockPanel>
+                                <local:FileBar x:Name="templateFileBar" IsSaveOnly="False" DockPanel.Dock="Bottom" />
+                                <avalonEdit:TextEditor DockPanel.Dock="Bottom"
+                                                       Name="TemplateTextBox"
+                                                       TextChanged="Avalon1_OnTextChanged"
+                                                       Foreground="White" />
+
+                            </DockPanel>
+
                         </TabItem>
                     </TabControl>
 
