--- a/TextrudeInteractive/OutputPane.xaml
+++ b/TextrudeInteractive/OutputPane.xaml
@@ -7,15 +7,16 @@
              xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
-             Loaded="OutputPane_OnLoaded">
+             >
     <DockPanel>
 
         <DockPanel   DockPanel.Dock="Bottom">
-            <Button DockPanel.Dock="Left" FontSize="8" Click="SaveToFile">Save File...</Button>
             <ComboBox Name="FormatSelection" DockPanel.Dock="Right" SelectionChanged="FormatSelection_OnSelectionChanged"
                       HorizontalAlignment="Right" HorizontalContentAlignment="Right" />
-
+            <local:FileBar x:Name="fileBar" DockPanel.Dock="Left" IsSaveOnly="True"/>
         </DockPanel>
+
+
 
         <avalonedit:TextEditor DockPanel.Dock="Top"
                                Foreground="LightSeaGreen"
