--- a/TextrudeInteractive/FileBar.xaml
+++ b/TextrudeInteractive/FileBar.xaml
@@ -10,7 +10,7 @@
     <DockPanel>
 
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-            <Button  Name ="ChooseButton"  Style="{StaticResource MaterialDesignFlatButton}" Click="ChooseFile" ToolTip="Choose file">...</Button>
+            <Button  Name ="ChooseButton"  Style="{StaticResource MaterialDesignFlatButton}" Click="UnlinkFile" ToolTip="Unlink file" Content="&#xa6;"/>
             <Button  Name="LoadButton" Style="{StaticResource MaterialDesignFlatButton}" Click="Load"  Content="&#x21e7;" ToolTip="Load" />
             <Button  Name="SaveButton" Style="{StaticResource MaterialDesignFlatButton}" Click="Save"  Content="&#x21e9;" ToolTip="Save" />
 
