--- a/TextrudeInteractive/MainWindow.xaml
+++ b/TextrudeInteractive/MainWindow.xaml
@@ -59,17 +59,23 @@
                 <MenuItem Click="SaveProject" Header="Save" />
                 <MenuItem Click="SaveProjectAs" Header="Save as..." />
                 <Separator />
-                <MenuItem Click="ExportInvocation" Header="Export as invocation" />
-                <Separator />
-                <MenuItem Header="Add">
-                    <MenuItem Click="AddModel" Header="model" />
-                    <MenuItem Click="AddOutput" Header="output" />
-                </MenuItem>
-                <MenuItem Header="Remove">
-                    <MenuItem Click="RemoveModel" Header="model" />
-                    <MenuItem Click="RemoveOutput" Header="output" />
-                </MenuItem>
+                <MenuItem Click="ExportInvocation" Header="Export as invocation" ToolTip="Builds a commmand line invocation"/>
+
             </MenuItem>
+            <MenuItem Header="Inputs">
+                <MenuItem Click="AddModel" Header="Add model" ToolTip="Adds a new model" />
+                <MenuItem Click="RemoveModel" Header="Remove model" ToolTip="Removes the last model"/>
+                <Separator />
+                <MenuItem Header="Reload linked" Click="ReloadAllInputs" ToolTip="Loads all inputs from linked files"/>
+                <MenuItem Header="Save linked" Click="SaveAllInputs" ToolTip="Saves all inputs back to linked files"/>
+            </MenuItem>
+            <MenuItem Header="Outputs">
+                <MenuItem Click="AddOutput" Header="Add" ToolTip="Adds a new output"/>
+                <MenuItem Click="RemoveOutput" Header="Remove" ToolTip="Removes the last output"/>
+                <Separator />
+                <MenuItem Header="Save linked" Click="SaveAllOutputs" ToolTip="Saves all outputs back to linked files"/>
+            </MenuItem>
+
             <MenuItem Header="_View">
                 <MenuItem Header="Toggle Line _Numbers" Click="ToggleLineNumbers" />
                 <MenuItem Header="Toggle _Word Wrap" Click="ToggleWordWrap" />
@@ -79,8 +85,12 @@
             <MenuItem Header="_Help">
                 <MenuItem Header="Home page..." Click="ShowAbout" />
                 <MenuItem Header="Scriban language reference..." Click="ShowLanguageRef" />
-                <Separator />
-                <MenuItem Header="Report a problem..." Click="NewIssue" />
+                <MenuItem Header="Send feedback">
+                    <MenuItem Header="Report a problem..." Click="NewIssue" />
+                    <MenuItem Header="Send a &#x1f642; !" Click="SendASmile" />
+                    <MenuItem Header="Suggest a feature..." Click="NewIdea" />
+                    <MenuItem Header="Ask a question..." Click="Questions" />
+                </MenuItem>
             </MenuItem>
         </Menu>
         <DockPanel DockPanel.Dock="Bottom">
